# zram-generator

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO  zram-generator-generate.sh  zram-generator.conf.example  zram-generator.spec
.cargo/: config
.github/workflows/: ci.yml
debian/: .gitignore  changelog  control  copyright  rules  source-overrides  watch  zram-generator-defaults.install  zram-generator-defaults.lintian-overrides  zram-generator.conf  zram-generator.install  zram-generator.lintian-overrides
man/: .gitignore  index.txt  zram-generator.conf.md  zram-generator.md
rpm/: zram-generator.spec
src/: config.rs  generator.rs  kernlog.rs  lib.rs  main.rs  setup.rs
tests/: test-invocations.sh  test_cases.rs
tests/01-basic/run.expected/units/: swap-create@.service
tests/02-zstd/etc/systemd/: zram-generator.conf
tests/02-zstd/run.expected/modules-load.d/: zram-generator.conf
tests/02-zstd/run.expected/units/: dev-zram0.swap
tests/03-too-much-memory/etc/systemd/: zram-generator.conf
tests/04-dropins/run.expected/units/: dev-zram0.swap  dev-zram2.swap
tests/05-kernel-disabled/proc/: cmdline
tests/06-kernel-enabled/proc/: cmdline  meminfo
tests/06-kernel-enabled/run.expected/units/: dev-zram0.swap
tests/07-mount-point/etc/systemd/: zram-generator.conf
tests/07-mount-point/run.expected/units/: -.mount  foo-bar-baz.mount  var-compressed.mount  var-folded.mount
tests/07a-mount-point-excl/etc/systemd/: zram-generator.conf
tests/07a-mount-point-excl/proc/: meminfo
tests/07a-mount-point-excl/run.expected/units/: \x2e\xc5\xbcupan\x2dci3p\xc5\x82y.mount
tests/08-mount-point/run.expected/units/: var-compressed.mount
tests/08-plain-device/etc/systemd/: zram-generator.conf
tests/08-plain-device/proc/self/: mountinfo
tests/09-mount-options/etc/systemd/: zram-generator.conf
tests/09-mount-options/run.expected/units/: var-compressed.mount
tests/09-zram-size/etc/systemd/: zram-generator.conf
tests/09-zram-size/proc/: meminfo
tests/09-zram-size/run.expected/units/: dev-zram0.swap
tests/10-example/etc/systemd/: zram-generator.conf
tests/10-example/run.expected/units/: dev-zram0.swap  run-compressed\x2dmount\x2dpoint.mount
tests/11-obsolete/etc/systemd/: zram-generator.conf
tests/11-obsolete/run.expected/units/: dev-zram0.swap  dev-zram1.swap
units/: .gitignore  swap-create@.service  swap-create@.service.in  systemd-zram-setup@.service.in
units/swap-create@.service.d/: binary-location.conf
units/systemd-zram-setup@.service.d/: binary-location.conf
(+26 files in other folders)
