# SPDX-License-Identifier: MIT

[package]
name = "zram-generator"
version = "0.3.2"
authors = ["Zbigniew Jędrzejewski-Szmek <zbyszek@in.waw.pl>",
           "Igor Raits <i.gnatenko.brain@gmail.com>",
           "наб <nabijaczleweli@gmail.com>"]
license = "MIT"
description = "Systemd unit generator for zram swap devices."
homepage = "https://github.com/systemd/zram-generator"
edition = "2018"

[dependencies]
anyhow = "1.0.12"
clap = { version = "2.33", default-features = false }
liboverdrop = "0.0.2"
rust-ini = ">=0.13, <0.17"
log = { version = "0.4", features = ["std"] }

[dev-dependencies]
tempfile = "3"
fs_extra = "1.1"

[profile.release]
lto = true
