# SPDX-License-Identifier: MIT

[package]
name = "zram-generator"
version = "1.1.2"
authors = ["Zbigniew Jędrzejewski-Szmek <zbyszek@in.waw.pl>",
           "Igor Raits <i.gnatenko.brain@gmail.com>",
           "наб <nabijaczleweli@nabijaczleweli.xyz>"]
license = "MIT"
description = "Systemd unit generator for zram swap devices."
homepage = "https://github.com/systemd/zram-generator"
edition = "2021"
exclude = ["tests/07a-mount-point-excl", "tests/10-example"]

[dependencies]
anyhow = "1.0.12"
clap = { version = "4.5", default-features = false, features = ["std", "cargo", "help", "usage", "error-context"] }
liboverdrop = "0.1.0"
rust-ini = ">=0.15, <0.18"
log = { version = "0.4", features = ["std"] }
fasteval = { version = "0.2", default-features = false }

[dev-dependencies]
tempfile = "3"
fs_extra = "1.3"
nix = ">=0.22, <0.24"
ctor = "0.2"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
